deployment/k8s/deployment-orch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stub-app-service-porc-cloud
  namespace: dev
  labels:
    app.kubernetes.io/name: stub-app-service-porc-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: stub-app-service-porc-cloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stub-app-service-porc-cloud
    spec:
      containers:
        - name: stub-app-service-porc-cloud
          image: ghcr.io/okrasnoporov-clgx/stub-app-service-porc-cloud:0.0.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8001
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /services/v1/info
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /services/v1/info
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
