deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stub-app-service
  namespace: dev
  labels:
    app.kubernetes.io/name: stub-app-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: stub-app-service
  ports:
    - name: http
      port: 8000
      targetPort: http

---

apiVersion: v1
kind: Service
metadata:
  name: stub-app-service-porc-cloud
  namespace: dev
  labels:
    app.kubernetes.io/name: stub-app-service-porc-cloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: stub-app-service-porc-cloud
  ports:
    - name: http
      port: 8001
      targetPort: http
