deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stub-app-service
                port:
                  name: http

          - path: /services
            pathType: Prefix
            backend:
              service:
                name: stub-app-service-porc-cloud
                port:
                  name: http
